Make tea not war

--- a/client/addperson.html
+++ b/client/addperson.html
@@ -1,5 +1,5 @@
 <template name="addperson">
-  <h1>Add Eater</h1>
+  <h1>Add Drinker</h1>
   <form>
     <div class="form-group">
       <label>Name</label>
