--- a/client/brews.html
+++ b/client/brews.html
@@ -1,32 +1,30 @@
-<template name="meals">
-  <h1>Meals</h1>
+<template name="brews">
+  <h1>Brews</h1>
   <table class="pure-table pure-table-horizontal">
     <thead>
       <tr>
         <th>Date</th>
-        <th>Chef</th>
-        <th>Cooked</th>
-        <th>For</th>
+        <th>Brew master</th>
+        <th>Party</th>
       </tr>
     </thead>
     <tbody>
-    {{#each meals}}
+    {{#each brews}}
     <tr>
-      <td>{{date}}</td>
+      <td>{{formatDate date}}</td>
       <td>
-      {{#each chef}}
+      {{#each master}}
         {{#with profile this}}
           {{> photoFrame}}
         {{/with}}
       {{/each}}
       </td>
-      <td>{{dish}}</td>
       <td>
-      {{#each eaters}}
+      {{#each drinkers}}
         {{#with profile this}}
           {{> photoFrame}}
         {{/with}}
-      {{/each}}        
+      {{/each}}
       </td>
     </tr>
     {{/each}}
