Fix last drank value

--- a/client/home.html
+++ b/client/home.html
@@ -22,7 +22,7 @@
         </li>
         <li>
           <label>Last drank</label>
-          {{#if lastEaten}}
+          {{#if lastDrank}}
           <span title="{{lastDrank}}">{{fromNow lastDrank}}</span>
           {{else}}
           <span title="Never">Never</span>
